Bug 989408 - Add checking IPCOpen to ShadowLayerForwarder r=nical,bjacob